test/compile-fail/parser/invalid-type.rs
fn a() -> i {}  //! ERROR(1:13): unexpected token: `{`, expected a type